--- a/shake-invalid-input/style.css
+++ b/shake-invalid-input/style.css
@@ -10,15 +10,15 @@ body{
 }
 
 form{
-    width: min(90%, 25em);
     background-color: aliceblue;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
+    border-radius: 0.5em;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
     left: 50%;
     padding: 5em 2em;
-    border-radius: 0.5em;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3)
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: min(90%, 25em);
 }
 
 .error-message{
@@ -28,13 +28,13 @@ form{
 }
 
 input, button{
-    display: block;
-    width: 100%;
-    padding: 1em;
-    outline: none;
-    color: white;
     border-radius: 0.3em;
+    color: white;
+    display: block;
+    outline: none;
+    padding: 1em;
     transition: background-color 0.3s ease;
+    width: 100%;
 }
 
 input{
@@ -45,8 +45,8 @@ input{
 
 button{
     background-color: #0080ff;
-    margin-top: 2.2em;
     cursor: pointer;
+    margin-top: 2.2em;
 }
 
 .shake{
