--- a/fd-calculator/style.css
+++ b/fd-calculator/style.css
@@ -109,6 +109,7 @@ button:hover{
 
 input[type="range"]{
     -webkit-appearance: none;
+    appearance: none;
     width: 100%;
     height: 8px;
     background-color: #ddd;
