--- a/bmi-calculator/style.css
+++ b/bmi-calculator/style.css
@@ -74,6 +74,7 @@ button{
     border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-top: 20px;
 }
 
 button:hover{
